Thu Jul 30 17:31:29 1998  booth  <booth@planck.pha.jhu.edu>

	* gsl_monte_miser.h, miser.c:
	Turn off the annoying warning in miser unless the user requests it.

Wed Jul 29 20:24:54 1998  bjg  <bjg@vvv.lanl.gov>

	* Makefile.am, Makefile.in: some fixes to pass make distcheck

	* Makefile.am, Makefile.in:
	experimenting with new top level makefile.am

Tue Jul 28 17:05:20 1998  booth  <booth@planck.pha.jhu.edu>

	* plain.c, vegas.c, miser.c:
	make all the _free functions check their argument.  Also, the init functions
	now throw EFAULT if given a null pointer.

	* gsl_monte_vegas.h, vegas.c:
	vegas1, vegas2 and vegas3 all go away.  Get them by setting the "stage"
	variabe appropriately.  Also, make _free check its argument.

	* vegas.c, gsl_monte_vegas.h: minor cleanup prior to be change.

	* vegas.c: minor changes, commiting by accident.

Mon Jul 27 22:52:49 1998  bjg  <bjg@vvv.lanl.gov>

	* Makefile.in, Makefile.am:
	fixed some of the include requirements for make dist

Mon Jul 27 15:19:54 1998  booth  <booth@planck.pha.jhu.edu>

	* vegas_print.h, vegas_test.c, miser_test.c, vegas-print.c, vegas.c, Attic/gsl_vegas.h, Attic/gsl_vegas_print.h, gsl_monte_vegas.h, miser.c, Attic/gsl_miser.h, Makefile.am, Makefile.in, gsl_monte_miser.h:
	Renamed public header files to follow convention correctly.

	* vegas.c, vegas_test.c, miser.c, miser_test.c, plain.c, plain_test.c, Attic/gsl_miser.h, Attic/gsl_vegas.h, gsl_monte_plain.h:
	All the integration functions now end with _integrate (except for
	vegas1, vegas2 and vegas3 which are going away RSN).

Tue Jul 21 21:54:33 1998  booth  <booth@planck.pha.jhu.edu>

	* vegas.c, vegas-print.c, Attic/gsl_vegas_print.h, Attic/gsl_vegas.h:
	trivial stuff: eliminate compiler warnings, eliminate some unneeded variables,
	change some types to make consistent with plain and miser.

	* gsl_monte_plain.h, plain.c, plain_test.c:
	Make "plain" conform to same style as miser and vegas.

Fri Jul 17 02:23:40 1998  jungman  <jungman@nnn.lanl.gov>
